:lipstick: Fix small CSS bugs
* Fixed tab titles having too small font-size
* Fixed line-height not being consistent in tab titles

This was caused by using button elements instead of li elements,
which come with different default styles by the user agent.

--- a/maykin_common/static/maykin_common/css/api.css
+++ b/maykin_common/static/maykin_common/css/api.css
@@ -111,6 +111,8 @@
     background-color: transparent;
     cursor: pointer;
     color: var(--tabs-item-color, var(--link-color));
+    font-size: inherit;
+    line-height: inherit;
 
     margin-block-end: -1px;
     border-block-end-color: var(--tabs-border-color);
@@ -134,7 +136,7 @@
   }
 
   .tabs__pane {
-    &:not('[hidden]') {
+    &:not([hidden]) {
       display: flex;
       flex-direction: column;
     }
